# dataset-golang-vulns

./: AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
src/golang_vulns/: __init__.py  osv_client.py
