[project]
name = "golang-vulns"
version = "0.1.0"
description = "Known vulnerabilities in projects using the Go programming language."
authors = [
    {name = "yoseio",email = "98276492+yoseio@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "golang_vulns", from = "src"}]


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
ruff = "^0.11.13"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
check = "ruff check && mypy ."
format = "ruff format"
